==> xuwenbolan/STM32/USER/USMART/usmart.c <==
#include "usmart.h"
#include "usart.h"

void usmart_reset_runtime(void)
{
	
	LL_TIM_ClearFlag_UPDATE(TIM4);//清除中断标志位 
	LL_TIM_SetAutoReload(TIM4,0XFFFF);//将重装载值设置到最大
	LL_TIM_SetCounter(TIM4,0);		//清空定时器的CNT
	usmart_dev.runtime=0;	
}

u32 usmart_get_runtime(void)
{
	if(LL_TIM_IsActiveFlag_UPDATE(TIM4)==SET)//在运行期间,产生了定时器溢出
	{
		usmart_dev.runtime+=0XFFFF;
	}
	usmart_dev.runtime+=LL_TIM_GetCounterMode(TIM4);
	return usmart_dev.runtime;		//返回计数值
}

void TIM4_IRQHandler(void)
{ 		   
//LL_TIM_GetITStatus();
//	LL_TIM_IsITFlag_UPDATE();
	if(LL_TIM_IsActiveFlag_UPDATE(TIM4)==SET)//溢出中断
	{
//		printf("tim runing\r\n");
		usmart_dev.scan();	//执行usmart扫描	
		LL_TIM_SetCounter(TIM4,0);		//清空定时器的CNT
		LL_TIM_SetAutoReload(TIM4,100);//恢复原来的设置		    
	  LL_TIM_ClearFlag_UPDATE(TIM4);  //清除中断标志位    		
	}	

	

}

void Timer4_Init(u16 arr,u16 psc)
{



   LL_TIM_InitTypeDef TIM_InitStruct = {0};

  /* Peripheral clock enable */
  LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM4);

  /* TIM4 interrupt Init */
  NVIC_SetPriority(TIM4_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(),0, 0));
  NVIC_EnableIRQ(TIM4_IRQn);

  /* USER CODE BEGIN TIM4_Init 1 */

  /* USER CODE END TIM4_Init 1 */
  TIM_InitStruct.Prescaler = psc;
  TIM_InitStruct.CounterMode = LL_TIM_COUNTERMODE_UP;
  TIM_InitStruct.Autoreload = arr;
  TIM_InitStruct.ClockDivision = LL_TIM_CLOCKDIVISION_DIV1;
  LL_TIM_Init(TIM4, &TIM_InitStruct);
  LL_TIM_DisableARRPreload(TIM4);
  LL_TIM_SetClockSource(TIM4, LL_TIM_CLOCKSOURCE_INTERNAL);
  LL_TIM_SetTriggerOutput(TIM4, LL_TIM_TRGO_RESET);
  LL_TIM_DisableMasterSlaveMode(TIM4);
	 
	LL_TIM_EnableIT_UPDATE(TIM4);
	LL_TIM_EnableCounter(TIM4);
	LL_TIM_GenerateEvent_UPDATE( TIM4);

}
