==> collectsand/VET6OLED/Core/USMART/usmart.c <==
#include "usmart.h"
#include "usart.h"
#include "stdio.h"

void usmart_reset_runtime(void)
{
    __HAL_TIM_CLEAR_FLAG(&TIM4_Handler, TIM_FLAG_UPDATE); //清除中断标志位
    __HAL_TIM_SET_AUTORELOAD(&TIM4_Handler, 0XFFFF);      //将重装载值设置到最大
    __HAL_TIM_SET_COUNTER(&TIM4_Handler, 0);              //清空定时器的CNT
    usmart_dev.runtime = 0;
}

uint32_t usmart_get_runtime(void)
{
    if (__HAL_TIM_GET_FLAG(&TIM4_Handler, TIM_FLAG_UPDATE) == SET) //在运行期间,产生了定时器溢出
    {
        usmart_dev.runtime += 0XFFFF;
    }
    usmart_dev.runtime += __HAL_TIM_GET_COUNTER(&TIM4_Handler);
    return usmart_dev.runtime; //返回计数值
}

void TIM4_IRQHandler(void)
{
    if (__HAL_TIM_GET_IT_SOURCE(&TIM4_Handler, TIM_IT_UPDATE) == SET) //溢出中断
    {
        usmart_dev.scan(); //执行usmart扫描
        __HAL_TIM_SET_COUNTER(&TIM4_Handler, 0);
        ;                                             //清空定时器的CNT
        __HAL_TIM_SET_AUTORELOAD(&TIM4_Handler, 100); //恢复原来的设置
    }
    __HAL_TIM_CLEAR_IT(&TIM4_Handler, TIM_IT_UPDATE); //清除中断标志位
}

void Timer4_Init(uint16_t arr, uint16_t psc)
{
    //定时器4
    __HAL_RCC_TIM4_CLK_ENABLE();
    HAL_NVIC_SetPriority(TIM4_IRQn, 3, 3); //设置中断优先级，抢占优先级3，子优先级3
    HAL_NVIC_EnableIRQ(TIM4_IRQn);         //开启ITM4中断

    TIM4_Handler.Instance = TIM4;                       //通用定时器4
    TIM4_Handler.Init.Prescaler = psc;                  //分频
    TIM4_Handler.Init.CounterMode = TIM_COUNTERMODE_UP; //向上计数器
    TIM4_Handler.Init.Period = arr;                     //自动装载值
    TIM4_Handler.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    HAL_TIM_Base_Init(&TIM4_Handler);
    HAL_TIM_Base_Start_IT(&TIM4_Handler); //使能定时器4和定时器4中断
}
